--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "knex": "<0.20.0",
     "pg": "^8.5.1",
     "pg-connection-string": "^2.4.0",
-    "sqlite3": "latest",
-    "strapi": "3.2.4",
+    "sqlite3": "5.0",
+    "strapi": "3.4.1",
     "strapi-admin": "^3.4.1",
-    "strapi-connector-bookshelf": "3.2.4",
-    "strapi-plugin-content-manager": "3.2.4",
-    "strapi-plugin-content-type-builder": "3.2.4",
-    "strapi-plugin-email": "3.2.4",
-    "strapi-plugin-graphql": "^3.2.4",
-    "strapi-plugin-upload": "3.2.4",
-    "strapi-plugin-users-permissions": "3.2.4",
-    "strapi-utils": "3.2.4"
+    "strapi-connector-bookshelf": "3.4.1",
+    "strapi-plugin-content-manager": "3.4.1",
+    "strapi-plugin-content-type-builder": "3.4.1",
+    "strapi-plugin-email": "3.4.1",
+    "strapi-plugin-graphql": "^3.4.1",
+    "strapi-plugin-upload": "3.4.1",
+    "strapi-plugin-users-permissions": "3.4.1",
+    "strapi-utils": "3.4.1"
   },
   "author": {
     "name": "A Strapi developer"
